--- a/client/public/partials/register.html
+++ b/client/public/partials/register.html
@@ -1,5 +1,5 @@
 ﻿  
-<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+<div class="navbar navbar-default navbar-fixed-top_" role="navigation">
 	  <div class="container">
 		<div class="_navbar-header">
 <!-- 		  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -17,27 +17,29 @@
 	  </div>
 </div>
 
-<div id="wrap" class="view-container container">
-  <div class="form-group">
+<div id="wrap_" class="view-container container">
+<form name="register_form">
+  <div class="form-group"  ng-class="{'has-error':register_form.username.$invalid && (register_form.username.$dirty || showError)}">
     <label for="exampleInputEmail1">שם משתמש</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="שם משתמש" ng-model="user.username">
+    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="שם משתמש" name="username" ng-model="user.username" required>
   </div>
-  <div class="form-group">
+  <div class="form-group" ng-class="{'has-error':register_form.firstname.$invalid && (register_form.firstname.$dirty || showError)}">
     <label for="exampleInputEmail1">שם</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="שם" ng-model="user.firstname">
+    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="שם" ng-model="user.firstname" name="firstname" required>
   </div>
-    <div class="form-group">
+    <div class="form-group"  ng-class="{'has-error':register_form.lastname.$invalid && (register_form.lastname.$dirty || showError)}">
     <label for="exampleInputEmail1">שם משפחה</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="שם משפחה" ng-model="user.lastname">
+    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="שם משפחה" ng-model="user.lastname" name="lastname" required>
   </div>
-  <div class="form-group">
+  <div class="form-group" ng-class="{'has-error':register_form.phone.$invalid && (register_form.phone.$dirty || showError)}">
     <label for="exampleInputEmail1">טלפון</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="טלפון" ng-model="user.phone">
+    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="טלפון" ng-model="user.phone" name="phone" required>
   </div>  
-  <div class="form-group">
+  <div class="form-group" ng-class="{'has-error':register_form.password.$invalid && (register_form.password.$dirty || showError)}">
     <label for="exampleInputEmail1">סיסמא</label>
-    <input type="password" class="form-control" id="exampleInputEmail1" placeholder="סיסמא" ng-model="user.password">
-  </div>   
+    <input type="password" class="form-control" id="exampleInputEmail1" name="password" placeholder="סיסמא" ng-model="user.password" required>
+  </div>
+</form>  
 </div>
   
   
