--- a/client/public/partials/list.html
+++ b/client/public/partials/list.html
@@ -1,16 +1,17 @@
 ﻿   <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-	  <div class="container">
+	  <div class="container" style="padding-top: 5px;">
 	  
   
 		<div class="col-xs-4">
 		<button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="goToFormPage($event)">חזרה</button>
 		</div>
 		<div class="col-xs-4">
-		  	<small class="title-message" ng-if="user.type=='driver'">רשימת טרמפיסטים</small>
-			<small class="title-message" ng-if="user.type=='trempist'">רשימת נהגים</small>		
+			
+			<button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="switchType($event)">{{trempslist.type == 'driver' ? 'נהגים' : 'טרמפיסטים'}}</button>
+				
 		</div>
 		<div class="col-xs-4">
-		   <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="fireEvent()">bbb</button> 
+		   <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="exitApp()">יציאה</button> 
 		</div>
 
 
@@ -25,8 +26,8 @@
 		{{error}}
 	  </div>
       <li class="list-group-item" style="text-align:center" ng-show="!tremps.length && !loading && !error" >
-		  	<h4  ng-if="user.type=='driver'">לא נרשמו טרמפיסטים עדיין</h4>
-			<h4  ng-if="user.type=='trempist'">לא נרשמו נהגים עדיין</h4>		
+		  	<h4  ng-if="user.type=='trempist'">לא נרשמו טרמפיסטים עדיין</h4>
+			<h4  ng-if="user.type=='driver'">לא נרשמו נהגים עדיין</h4>		
 	  </li> 
 	  <li class="list-group-item" ng-repeat="tremp in tremps" ng-show="tremps.length" ng-hide="error">
 		<h4 class="list-group-item-heading">{{tremp.name}}</h4>
